# federated-learning-training

./: .gitignore  404.html  README.md  fl-course-env-2.yaml  fl-course-env-new.yaml  fl-course-env.yaml  index.html  mkdocs.yml  preliminaries.py
course_material/: index.html
course_schedule/: index.html
docs/: course_material.md  course_schedule.md  index.md  linux.md  macos.md  precourse.md  windows.md
exercise-hvg/: centralized_hvg.ipynb  pyproject.toml  results_comparison.ipynb
exercise-hvg/app/: client_app.py  custom_strategy.py  server_app.py  task.py  test
exercise-hvg/app/old/: client_app_old.py  custom_strategy_old.py  server_app_old.py
exercise-real/: download_data.ipynb
exercise-scvi/: centralized_training.ipynb  models_comparison.ipynb  pyproject.toml
exercise-scvi-solution/: centralized_training.ipynb  models_comparison.ipynb  pyproject.toml
exercise-scvi-solution/app/: client_app.py  task.py
exercise-scvi/app/: __init__.py  client_app.py  custom_strategy.py  server_app.py  task.py
exercise-scvi/app/old/: client_app.py  server_app.py
exercise-scvi/data_input/: batch_list.json  hvg_list.json
exercise-variance/: centralized_analysis.ipynb  results_comparison.ipynb
exercise-variance-solution/: centralized_analysis.ipynb  pyproject.toml  results_comparison.ipynb
exercise-variance-solution/app/: client_app.py  custom_strategy.py  server_app.py
exercise-variance-solution/data_input/: all_genes_list.json
exercise-variance-solution/data_output/: top2000_genes_centralized.json
exercise-variance/app/: client_app.py  custom_strategy.py  server_app.py  task.py
linux/: index.html
macos/: index.html
precourse/: index.html
search/: search_index.json
windows/: index.html
