[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HighVariance"
version = "1.0.0"
description = "A Flower for high-variance genes identification"
license = "Apache-2.0"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "dmalpetti"

[tool.flwr.app.components]
serverapp = "app.server_app:app"
clientapp = "app.client_app:app"

[tool.flwr.app.config]
# Main simulation parameters
num-server-rounds = 1

# Parameters for exercise starting point
max_rand_int = 100
max_rand_weight = 10

# Paths for inputs and outputs
client_folder_path = "data_federated/data_client_{partition_id}"
server_folder_path = "data_federated/data_server"
all_genes_file = "all_genes.json"
top2k_genes_file = "top2k_genes.json"

#client_folder_path = "."

# These settings are for setting the federated simulation that runs locally on your laptopt
[tool.flwr.federations]
default = "local-simulation"
[tool.flwr.federations.local-simulation]
options.num-supernodes = 7  # Number of clients in the simulation

# These settings are for setting the live federated training done as a final exercise
[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true
