[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FedSCVI"
version = "1.0.0"
description = "FedSCVI: A Flower for federated single cell variational inference."
license = "Apache-2.0"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "dmalpetti"

[tool.flwr.app.components]
serverapp = "app.server_app:app"
clientapp = "app.client_app:app"

[tool.flwr.app.config]

# Main simulation parameters
num_rounds = 10
num_local_epochs = 3

early_stopping_patience = 3
early_stopping_min_delta = 10.0

# Paths for input and output files
client_folder_path = "data_federated/data_client_{partition_id}"
server_folder_path = "data_federated/data_server"

all_techs_file = "all_techs.json"
all_genes_file = "all_genes.json"
top2k_genes_file = "top2k_genes.json"

model_file_path = "model_federated"
loss_plot_path = "loss_plot.png"

# Model architecture parameters
use_layer_norm = "both" 
use_batch_norm = "none"
encode_covariates = true
dropout_rate = 0.2
n_layers = 2

# SecAgg+ parameters
num_shares = 3                   
reconstruction_threshold = 2     

#client_folder_path = "."

# These settings are for setting the federated simulation that runs locally on your laptopt
[tool.flwr.federations]
default = "local-simulation"
[tool.flwr.federations.local-simulation]
options.num-supernodes = 7  # Number of clients in the simulation

# These settings are for setting the live federated training done as a final exercise
[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true